--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,35 @@
+:root {
+  --color-main-bg: rgb(128, 128, 128);
+  --color-main-text: rgb(240, 240, 240);
+  --color-line: rgb(59, 68, 26);
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
+}
+
 body {
   margin: 0;
+  padding: 0;
+  font-size: 1.8rem;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  width: 100%;
+  max-width: 1920px;
+  padding: 0 2rem;
 }
