--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -1,11 +1,10 @@
 .app {
     display: grid;
     grid-template-areas:
-      'header'
       'main'
       'footer';
     grid-template-columns: 1fr;
-    grid-template-rows: 5rem 1fr 5rem;
+    grid-template-rows: 1fr 5rem;
     min-height: 100vh;
     width: 100%;
   }
@@ -14,4 +13,5 @@
     grid-area: main;
     display: flex;
     justify-content: center;
+    padding-top: 5rem;
   }
