feat: implement nav menu

--- a/frontend/src/app/App.css
+++ b/frontend/src/app/App.css
@@ -12,6 +12,5 @@
   .main {
     grid-area: main;
     display: flex;
-    justify-content: center;
-    padding-top: 5rem;
+    /* padding-top: 5rem; */
   }
