--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -3,12 +3,12 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border-top: 1px solid red;
+  color: var(--color-footer-text);
+  background-color: var(--color-footer-bg);
 }
   
 .footer .container {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  border: 1px solid;
-} 
+}
