--- a/frontend/src/components/nav/Nav.css
+++ b/frontend/src/components/nav/Nav.css
@@ -2,16 +2,32 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 10;
+  z-index: 1;
   width: 25rem;
   height: 100vh;
   display: flex;
   flex-direction: column;
-  border: 1px solid;
+  padding-top: 10rem;
+  padding-left: 2.5rem;
+  background-image: url(../../assets/images/nav-background.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in-out;
 }
 
 .nav.open {
   transform: translateX(0);
+}
+
+.nav-link {
+  margin-bottom: 2.5rem;
+  font-size: 2rem;
+  text-decoration: none;
+  color: var(--color-third-text);
+}
+  
+.nav-link.unselected {
+  color: var(--color-main-text);
 }
