feat: implement base layout

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@
   --color-second-text: #ffffff;
   --color-third-text: #FF3F3A;
   --color-line: #FF3F3A;
+  --color-about-bg: #E5E8ED;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
   --color-team-block: #ffcf2d;
