--- a/frontend/src/sections/descSection/DescSection.css
+++ b/frontend/src/sections/descSection/DescSection.css
@@ -19,8 +19,8 @@
   justify-content: flex-end;
   align-items: center;
   width: 90%;
-  padding: 10rem 0;
-  font-size: 2rem;
+  padding: 15rem 0;
+  font-size: 3rem;
   background-image: url(../../assets/images/desc-section-illustration.png);
   background-repeat: no-repeat;
   background-position: left;
@@ -29,4 +29,9 @@
 
 .desc-text-container {
   width: 30%;
+}
+
+.desc-text-container ul {
+  padding: 0;
+  list-style: none;
 }
