--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,18 +1,23 @@
 :root {
   --color-main-text: #1e212c;
   --color-second-text: #ffffff;
-  --color-third-text: #FF3F3A;
-  --color-line: #FF3F3A;
-  --color-about-bg: #E5E8ED;
+  --color-third-text: #ff3f3a;
+  --color-fourth-text: #9a3b82;
+  --color-line: #ff3f3a;
+  --color-gray: #d7dadd;
+  --color-about-bg: #e5e8ed;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
   --color-team-block: #ffcf2d;
-  --color-button: linear-gradient(55deg, #FF3F3A 0%, #F75E05 100%);
+  --color-button: linear-gradient(55deg, #ff3f3a 0%, #f75e05 100%);
+  
 }
 
-* {
-  box-sizing: border-box;
-}
+* { box-sizing: border-box; }
+
+li { list-style: none; }
+
+ul { margin: 0; }
 
 html {
   font-size: 62.5%; /* 16px x 62.5 = 10px = 1rem */
