--- a/frontend/src/components/listWords/ListWords.css
+++ b/frontend/src/components/listWords/ListWords.css
@@ -1,17 +1,15 @@
 .listWords {
   grid-area: listWords;
-  padding: 1rem 2rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  column-gap: 2rem;
+  row-gap: 2.5rem;
+  padding: 1rem;
   overflow-y: scroll;
   scroll-behavior: smooth;
 }
 
 .listWords::-webkit-scrollbar {
   width: 0;
-}
-
-.listWords li {
-  width: 80%;
-  height: 20rem;
-  margin-bottom: 1rem;
-  background-color: rgba(208, 240, 228, 0.3);
 }
