--- a/frontend/src/components/word/Word.css
+++ b/frontend/src/components/word/Word.css
@@ -1,4 +1,74 @@
-img {
-  width: 100px;
-  height: 100px;
+.word-container {
+  display: grid;
+  grid-template-areas: 
+    "image"
+    "word"
+    "description";
+  grid-template-columns: 1fr;
+  grid-template-rows: 30rem 10rem 1fr;
+  width: 100%;
+  max-width: 45rem;
+  padding: 0.5rem;
+  background-color: rgba(208, 240, 228, 0.3);
+  border-bottom-left-radius: 2rem;
+  border-bottom-right-radius: 2rem;
+}
+
+.word-img {
+  grid-area: image;
+  width: 100%;
+  height: 100%;
+}
+
+.word-wrd {
+  grid-area: word;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 2.5rem;
+  font-weight: 500;
+  padding: 1rem;
+}
+
+.wrd-transl-container {
+  display: flex;
+  column-gap: 1rem;
+}
+
+.word-transl {
+  font-size: 2.5rem;
+  font-weight: 300;
+  margin: 0;
+  padding-bottom: 1rem;
+}
+
+.word-description {
+  grid-area: description;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.word-wrd p,
+.word-meaning p,
+.word-example p {
+  margin: 0;
+}
+
+.word-meaning,
+.word-example {
+  font-size: 1.8rem;
+  padding-bottom: 1.5rem;
+  text-align: center;
+}
+
+.word-meaning .row p,
+.word-example .row p {
+  font-weight: 400;
+}
+
+.word-meaning > p,
+.word-example > p {
+  font-weight: 300;
 }
