--- a/frontend/src/components/header/Header.css
+++ b/frontend/src/components/header/Header.css
@@ -9,3 +9,16 @@
   height: 5rem;
   padding: 0 3rem;
 }
+
+
+.user-name-container {
+  display: flex;
+  align-items: center;
+}
+
+.name {
+  font-size: 2rem;
+  font-weight: 500;
+  margin-right: 1rem;
+  color: var(--color-fourth-text);
+}
