--- a/frontend/src/components/nav/Nav.css
+++ b/frontend/src/components/nav/Nav.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 10;
   width: 25rem;
   height: 100vh;
   display: flex;
@@ -15,6 +15,7 @@
   background-size: cover;
   transform: translateX(-100%);
   transition: transform 0.4s ease-in-out;
+  opacity: 0.99 !important;
 }
 
 .nav.open {
