--- a/frontend/src/components/word/Word.css
+++ b/frontend/src/components/word/Word.css
@@ -9,7 +9,6 @@
   width: 100%;
   max-width: 45rem;
   padding: 0.5rem;
-  background-color: rgba(208, 240, 228, 0.3);
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
@@ -20,7 +19,7 @@
   height: 100%;
 }
 
-.word-wrd {
+.word {
   grid-area: word;
   display: flex;
   flex-direction: column;
@@ -30,7 +29,7 @@
   padding: 1rem;
 }
 
-.wrd-transl-container {
+.word-transl-container {
   display: flex;
   column-gap: 1rem;
 }
@@ -50,25 +49,21 @@
   align-items: center;
 }
 
-.word-wrd p,
-.word-meaning p,
-.word-example p {
+.word p,
+.word-text p {
   margin: 0;
 }
 
-.word-meaning,
-.word-example {
+.word-text {
   font-size: 1.8rem;
   padding-bottom: 1.5rem;
   text-align: center;
 }
 
-.word-meaning .row p,
-.word-example .row p {
+.word-text .row p {
   font-weight: 400;
 }
 
-.word-meaning > p,
-.word-example > p {
+.word-text > p {
   font-weight: 300;
 }
