--- a/frontend/src/screens/BookScreen/BookScreen.css
+++ b/frontend/src/screens/BookScreen/BookScreen.css
@@ -2,7 +2,7 @@
   justify-content: center;
   padding-top: 5rem;
   height: calc(100vh - 5rem);
-  background-color: rgba(208, 240, 228, 0.2);
+  /* background-color: rgba(208, 240, 228, 0.2); */
 }
 
 .bookscreen .container {
