--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,6 +9,8 @@
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
   --color-team-block: #ffcf2d;
+  --color-hard: #ff4242;
+  --color-learned: #03cea5;
   --color-button: linear-gradient(55deg, #ff3f3a 0%, #f75e05 100%);
 }
 
