--- a/frontend/src/components/word/Word.css
+++ b/frontend/src/components/word/Word.css
@@ -7,22 +7,18 @@
   grid-template-columns: 1fr;
   grid-template-rows: 30rem 10rem 1fr;
   width: 100%;
-  max-width: 45rem;
+  max-width: 41rem;
   padding: 0.5rem;
   border-bottom-left-radius: 2rem;
   border-bottom-right-radius: 2rem;
 }
 
-.word-container.neut {
-  border: 2px solid blue;
-}
-
 .word-container.hard {
-  border: 2px solid red;
+  box-shadow: inset 0.5em 0.5em 2em var(--color-hard);
 }
 
 .word-container.learned {
-  border: 2px solid green;
+  box-shadow: inset 0.5em 0.5em 2em var(--color-learned);
 }
 
 .word-img {
@@ -78,4 +74,128 @@
 
 .word-text > p {
   font-weight: 300;
+}
+
+.controls-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem;
+}
+
+.btn-hard {
+  position: relative;
+  margin-left: 2rem;
+  margin-right: 1rem;
+  padding: 0.25rem 1rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  letter-spacing: 0.1rem;
+  color: var(--color-second-text);
+  background-color: var(--color-hard);
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.btn-hard:hover {
+  box-shadow: inset 0.01rem 0.01rem 0.5rem var(--color-fourth-text);
+}
+
+.btn-hard.to::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -1.9rem;
+  width: 2rem;
+  height: 3rem;
+  background-image: url(../../assets/icons/in-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: translateY(-50%);
+}
+
+.btn-hard.from::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -1.9rem;
+  width: 2rem;
+  height: 3rem;
+  background-image: url(../../assets/icons/out-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: translateY(-50%);
+}
+
+.btn-learn {
+  position: relative;
+  margin-left: 3rem;
+  margin-right: 3rem;
+  padding: 0.25rem 1rem;
+  font-size: 1.4rem;
+  font-weight: 100;
+  letter-spacing: 0.1rem;
+  color: var(--color-second-text);
+  background-color: var(--color-learned);
+  border: none;
+  border-radius: 0.2rem;
+  cursor: pointer;
+}
+
+.btn-learn:hover {
+  box-shadow: inset 0.01rem 0.01rem 0.5rem var(--color-fourth-text);
+}
+
+.btn-learn.to::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -1.9rem;
+  width: 2rem;
+  height: 3rem;
+  background-image: url(../../assets/icons/in-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: translateY(-50%);
+}
+
+.btn-learn.from::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: -1.9rem;
+  width: 2rem;
+  height: 3rem;
+  background-image: url(../../assets/icons/out-arrow.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  transform: translateY(-50%);
+}
+
+.btn-stat {
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  background: transparent;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  cursor: pointer;
+}
+
+.btn-stat:hover {
+  transform: scale(1.1);
+}
+
+.btn-stat.to {
+  background-image: url(../../assets/icons/forward-arrow.svg);
+}
+
+.btn-stat.from {
+  background-image: url(../../assets/icons/back-arrow.svg);
 }
