--- a/frontend/src/components/word/Word.css
+++ b/frontend/src/components/word/Word.css
@@ -1,4 +1,5 @@
 .word-container {
+  position: relative;
   display: grid;
   grid-template-areas: 
     "image"
@@ -78,17 +79,16 @@
 
 .controls-container {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  column-gap: 2rem;
   margin: 0.5rem;
 }
 
 .btn-hard {
-  position: relative;
-  margin-left: 2rem;
-  margin-right: 1rem;
-  padding: 0.25rem 1rem;
-  font-size: 1.4rem;
+  min-width: 11rem;
+  padding: 0.25rem;
+  font-size: 1.6rem;
   font-weight: 100;
   letter-spacing: 0.1rem;
   color: var(--color-second-text);
@@ -102,40 +102,10 @@
   box-shadow: inset 0.01rem 0.01rem 0.5rem var(--color-fourth-text);
 }
 
-.btn-hard.to::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -1.9rem;
-  width: 2rem;
-  height: 3rem;
-  background-image: url(../../assets/icons/in-arrow.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  transform: translateY(-50%);
-}
-
-.btn-hard.from::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -1.9rem;
-  width: 2rem;
-  height: 3rem;
-  background-image: url(../../assets/icons/out-arrow.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  transform: translateY(-50%);
-}
-
 .btn-learn {
-  position: relative;
-  margin-left: 3rem;
-  margin-right: 3rem;
-  padding: 0.25rem 1rem;
-  font-size: 1.4rem;
+  min-width: 11rem;
+  padding: 0.25rem;
+  font-size: 1.6rem;
   font-weight: 100;
   letter-spacing: 0.1rem;
   color: var(--color-second-text);
@@ -149,37 +119,12 @@
   box-shadow: inset 0.01rem 0.01rem 0.5rem var(--color-fourth-text);
 }
 
-.btn-learn.to::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -1.9rem;
-  width: 2rem;
-  height: 3rem;
-  background-image: url(../../assets/icons/in-arrow.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  transform: translateY(-50%);
-}
-
-.btn-learn.from::before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: -1.9rem;
-  width: 2rem;
-  height: 3rem;
-  background-image: url(../../assets/icons/out-arrow.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-  transform: translateY(-50%);
-}
-
 .btn-stat {
-  width: 2rem;
-  height: 2rem;
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  width: 2.5rem;
+  height: 2.5rem;
   border: none;
   background: transparent;
   background-repeat: no-repeat;
@@ -198,4 +143,51 @@
 
 .btn-stat.from {
   background-image: url(../../assets/icons/back-arrow.svg);
+}
+
+.statWord {
+  position: absolute;
+  top: 2rem;
+  left: 2rem;
+  right: 2rem;
+  bottom: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.statWord-title {
+  font-size: 3rem;
+}
+
+.statWord-game {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  font-size: 2rem;
+}
+
+.statWord-game-title {
+  font-size: 2.2rem;
+}
+
+.statWord-game-result {
+  display: flex;
+  align-items: center;
+  column-gap: 0.5rem;
+}
+
+.statWord-game-correct {
+  font-size: 2.5rem;
+  color: var(--color-learned);
+}
+
+.statWord-game-wrong {
+  font-size: 2.5rem;
+  color: var(--color-hard);
+}
+
+.statWord-game-result p:nth-child(2) {
+  font-weight: 100;
 }
