feat: add games screen

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,8 @@
   --color-fourth-text: #424551;
   --color-line: #ff3f3a;
   --color-gray: #d7dadd;
-  --color-about-bg: #e5e8ed;
+  --color-games-bg: #ebedf0;
+  --color-about-bg: #ebedf0;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
   --color-team-block: #ffcf2d;
