--- a/frontend/src/games/Game.css
+++ b/frontend/src/games/Game.css
@@ -1,14 +1,13 @@
 .game {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: -1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: aqua;
+}
+
+.game ~ footer {
+  background-color: aqua;
+}
+
+.game ~ footer * {
+  display: none;
 }
 
 .game .container {
@@ -16,7 +15,6 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  border: 1px solid blue;
 }
 
 .game-start {
