feat: implement fetch data to audio challenge

--- a/frontend/src/games/Game.css
+++ b/frontend/src/games/Game.css
@@ -1,9 +1,9 @@
 .game {
-  background-color: aqua;
+  background-color: var(--color-audiochallenge-bg);
 }
 
 .game ~ footer {
-  background-color: aqua;
+  background-color: var(--color-audiochallenge-bg);
 }
 
 .game ~ footer * {
