--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@
   --color-line: #ff3f3a;
   --color-gray: #d7dadd;
   --color-games-bg: #ebedf0;
+  --color-audiochallenge-bg: #9bcbf5;
   --color-about-bg: #ebedf0;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
