--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@
   --color-gray: #d7dadd;
   --color-games-bg: #ebedf0;
   --color-audiochallenge-bg: #9bcbf5;
+  --color-sprint-bg: #cfd4ff;
   --color-about-bg: #ebedf0;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
