--- a/frontend/src/games/Game.css
+++ b/frontend/src/games/Game.css
@@ -2,11 +2,16 @@
   display: none;
 }
 
+.game {
+  display: flex;
+  justify-content: center;
+  color: var(--color-main-text);
+}
+
 .game .container {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
 }
 
 .game.audioChallenge {
@@ -26,5 +31,110 @@
 }
 
 .game-start {
-  border: 1px solid red;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.game-description {
+  text-align: center;
+}
+
+.game-description > h2 {
+  font-size: 4rem;
+  font-weight: 500;
+}
+
+.game-description > p {
+  font-size: 2.2rem;
+}
+
+.levels-container {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.levels-container > p {
+  font-size: 2.4rem;
+}
+
+.levels {
+  display: flex;
+  justify-content: center;
+  column-gap: 2rem;
+}
+
+.level > input {
+  position: absolute;
+  z-index: -1;
+  opacity: 0;
+}
+
+.level-mark {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5rem;
+  height: 5rem;
+  user-select: none;
+  border-radius: 50%;
+}
+
+.level-mark:hover {
+  border: 1px solid;
+}
+
+.level > input:checked ~ .level-mark {
+  border: 1px solid;
+}
+
+.level:first-child > .level-mark {
+  background-color: #f8f4e9;
+}
+
+.level:nth-child(2) > .level-mark {
+  background-color: #faf0d0;
+}
+
+.level:nth-child(3) > .level-mark {
+  background-color: #f5d0a5;
+}
+
+.level:nth-child(4) > .level-mark {
+  background-color: #dfe6fa;
+}
+
+.level:nth-child(5) > .level-mark {
+  background-color: #bbcdfa;
+}
+
+.level:nth-child(6) > .level-mark {
+  background-color: #dba8ce;
+}
+
+.game-play {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: 2rem;
+  width: 100%;
+  max-width: 40rem;
+}
+
+.question-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  max-width: 40rem;
+  height: 40rem;
+}
+
+.question-container.correct {
+  border: 1px solid var(--color-correct);
+}
+
+.question-container.wrong {
+  border: 1px solid var(--color-error);
 }
