--- a/frontend/src/games/components/answers/Answers.css
+++ b/frontend/src/games/components/answers/Answers.css
@@ -1,7 +1,29 @@
-.answer-btn.error {
-  border: 1px solid var(--color-error);
+.answers-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: 100%;
 }
 
-.answer-btn.correct {
-  border: 1px solid var(--color-correct);
+.audioChallenge .answer-btn {
+  font-size: 2.2rem;
+  padding: 0.5rem 1rem;
+  background-color: var(--color-gray);
+  border: 1px solid transparent;
+  border-radius: 0.1rem;
+  transition: 0.3s ease-in-out;
+}
+
+.audioChallenge .answer-btn:hover {
+  border: 1px solid;
+}
+
+.audioChallenge .answer-btn.error {
+  background-color: var(--color-error);
+}
+
+.audioChallenge .answer-btn.correct {
+  background-color: var(--color-correct);
 }
