--- a/frontend/src/games/components/exitBtn.tsx/ExitBtn.css
+++ b/frontend/src/games/components/exitBtn.tsx/ExitBtn.css
@@ -1,5 +1,18 @@
 .exit-btn {
   position: absolute;
   top: 15rem;
-  right: 15rem; 
+  right: 15rem;
+  width: 4rem;
+  height: 4rem;
+  background-color: transparent;
+  background-image: url(../../../assets/icons/exit.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  border: none;
+  cursor: pointer;
+}
+
+.exit-btn:hover {
+  transform: scale(1.05);
 }
