--- a/frontend/src/components/footer/Footer.css
+++ b/frontend/src/components/footer/Footer.css
@@ -12,3 +12,23 @@
   align-items: center;
   justify-content: space-between;
 }
+
+.year-github {
+  display: flex;
+  align-items: center;
+  font-size: 1.4rem;
+}
+
+.github {
+  text-decoration: none;
+  color: inherit;
+}
+
+.rsshool {
+  width: 5rem;
+  height: 2rem;
+  background-image: url(../../assets/icons/rs_school_js.svg);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
