--- a/frontend/src/games/Game.css
+++ b/frontend/src/games/Game.css
@@ -114,6 +114,7 @@
 }
 
 .game-play {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -131,10 +132,44 @@
   height: 40rem;
 }
 
+.sprint .question-container {
+  box-shadow: inset 0.5rem 0rem 1rem var(--color-games-bg);
+}
+
 .question-container.correct {
-  border: 1px solid var(--color-correct);
+  box-shadow: inset 0.5rem 0rem 1rem var(--color-correct);
 }
 
 .question-container.wrong {
-  border: 1px solid var(--color-error);
+  box-shadow: inset 0.5rem 0rem 1rem var(--color-error);
+}
+
+.question-answer-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+}
+
+.question-answer-container p {
+  margin: 2rem;
+}
+
+.question-answer-container > p:first-child {
+  font-size: 4rem;
+  font-weight: 500;
+}
+
+.question-answer-container > p:nth-child(2) {
+  font-size: 3rem;
+  font-weight: 300;
+}
+
+.choose-btns {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 2rem;
+  width: 100%;
 }
