--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,12 +11,13 @@
   --color-about-bg: #ebedf0;
   --color-footer-bg: #1e212c;
   --color-footer-text: #ffffff;
-  --color-team-block: #ffcf2d;
+  --color-team-block: #fff8e0;
   --color-hard: #f77272;
   --color-learned: #6fc264;
   --color-button: linear-gradient(55deg, #ff3f3a 0%, #f75e05 100%);
   --color-error: #f77272;
   --color-correct: #6fc264;
+  --color: #808080;
 }
 
 * { box-sizing: border-box; }
