--- a/frontend/src/screens/AboutScreen/AboutScreen.css
+++ b/frontend/src/screens/AboutScreen/AboutScreen.css
@@ -5,10 +5,6 @@
   align-items: center;
 }
 
-.about {
-  /* background-color: var(--color-about-bg); */
-}
-
 .team {
   display: flex;
   flex-direction: column;
@@ -16,18 +12,44 @@
 }
 
 .team-title {
-  margin-left: 3rem;
   font-size: 3rem;
 }
 
 .team-block-container {
   display: flex;
-
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
+  gap: 3rem;
 }
 
 .team-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
   width: 30rem;
   height: 40rem;
-  margin: 3rem;
-  background-color: var(--color-team-block);
+  padding-left: 1rem;
+}
+
+.team-block p {
+  margin: 0.25rem;
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+.team-block > p:first-child {
+  font-size: 2.2rem;
+}
+
+.santalau {
+  background-image: url(../../assets/images/self-portret.png);
+}
+
+.stackoverflow,
+.tutotial  {
+  background-image: url(../../assets/images/image.png);
+  background-repeat: no-repeat;
+  background-position: bottom center;
+  background-size: cover;
 }
